<resources>
    <string name="app_name">ProjectPickle</string>
    <string name="title_activity_login">Sign in</string>
    <string name="widget_title">Items</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not registered? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Passwsord</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="add_item_txt">Add Item</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="hint_product_name">Product Name</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_expiry_date">Expiry Date</string>
    <string name="hint_price">Price</string>
    <string name="btn_scan_barcode">Scan Barcode</string>

    <string name="cnt_product">Name of the product</string>
    <string name="cnt_quantity">Quantity of the product</string>
    <string name="cnt_date">Expiry date of the product</string>
    <string name="cnt_price">Price of the product</string>
    <string name="cnt_bcd">Scan barcode</string>
    <string name="cnt_add">Add Item</string>

    <string name="tst_enter_pwd">Enter password!</string>
    <string name="tst_email_id">Enter email address!</string>
    <string name="tst_pwd_shrt">Password too short, enter minimum 6 characters!</string>

    <string name="auth_failed_tst">Authentication failed.</string>
    <string name="rst_id">Enter your registered email id</string>
    <string name="rst_inst">We have sent you instructions to reset your password!</string>
    <string name="rst_failed">Failed to send reset email!</string>

    <string name="txt_permission">Please grant permissions.</string>
    <string name="KEY_LIST">list</string>
    <string name="ada_expiring">Expiring in&#160;</string>
    <string name="ada_date">&#160;days</string>
    <string name="ada_quantity">Quantity:&#160;</string>
    <string name="ada_price">Price:&#160;</string>
    <string name="KEY_MODEL">model</string>
    <string name="itm_exists">Item already exists</string>
    <string name="err_bcd">Barcode Detector not functional, please wait for sometime</string>
    <string name="err_nobcd">No barcode detected</string>
    <string name="dialog_msg">Hold on!</string>
    <string name="main_loading">Loading..</string>
    <string name="main_getdata">Getting Data</string>
    <string name="main_removeitm">Remove Item?</string>
    <string name="main_undo">Undo</string>
    <string name="info_exit">Please click BACK again to exit</string>
    <string name="sign_up">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="total_items">Total Items :</string>
    <string name="enter_your_phone_number">Enter Your Phone Number:</string>
    <string name="next">NEXT</string>
    <string name="we_have_sent_you_an_otp">We have sent you an OTP</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="sign_in">SIGN IN</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="name">Name</string>
    <string name="order_total">Order Total:</string>
    <string name="rate_your_order">RATE YOUR ORDER</string>
    <string name="let_s_have_a_look_at_gruhudhyogs_nearby">Let\'s have a look at gruhudhyogs nearby</string>
    <string name="hello_hrishi">Hello, Hrishi!</string>
    <string name="profile">Profile</string>
    <string name="person_name">Person Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="search_a_shop">Search a shop</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="error_phone">Somthing is wrong, we will fix it soon...</string>
    <string name="inv_code">Invalid code entered...</string>
    <string name="profile_updated">Profile updated successfully</string>
    <string name="write_cmt">Please write your comment here ...</string>
    <string name="wrt_feedback">Please give feedback about this seller :)</string>
    <string name="rate_ord">Rate your order</string>
    <string name="very_bad">Very Bad</string>
    <string name="not_good">Not good</string>
    <string name="quite">Quite ok</string>
    <string name="vgood">Very Good</string>
    <string name="excell">Excellent !!!</string>
    <string name="submit_ord">Submit</string>
    <string name="sub_cncl">Cancel</string>
    <string name="later">Later</string>
    <string name="login_by_email">Login by Email</string>

</resources>
